fix styling of down arrow in error messages

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -327,6 +327,7 @@ section h3 {
   .linked-to-field {
     cursor: pointer;
     .icon-chevron-down {
+      vertical-align: top;
       .opacity(25);
       margin-left: 5px;
     }
