Perhaps fix selenium tests that were failing around the auto-generation of sort_name

--- a/frontend/app/views/agents/name_forms/_agent_corporate_entity.html.erb
+++ b/frontend/app/views/agents/name_forms/_agent_corporate_entity.html.erb
@@ -15,7 +15,7 @@
       <%= form.label("sort_name") %>
       <div class="controls">
         <%= form.textfield "sort_name", form["sort_name"], :readonly => "readonly" %>
-        <label><%= form.checkbox "automatic" %> <small>Automatically generate?</small></label>
+        <label><%= form.checkbox "automatic", true, :class => "sort-name-generation-type" %> <small>Automatically generate?</small></label>
       </div>
     </div>
     <hr/>
