WIP add basic linking facility from events to agents -- not quite there... some weird errors being displayed

--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -42,6 +42,7 @@
                     </ul>
                   </li>
                   <li><%= link_to "Location", :controller => :locations, :action => :new %></li>
+                  <li><%= link_to "Event", :controller => :events, :action => :new %></li>
                 </ul>
               </li>
 							<li class="dropdown import-container">
