Allow creation of agents via the linker and implement browse too

--- a/frontend/app/views/shared/_templates.html.erb
+++ b/frontend/app/views/shared/_templates.html.erb
@@ -61,7 +61,7 @@
                 {if config.format_property}
                   ${item[config.format_property]}
                 {else}
-                  ${AS.quickTemplate(config.format, item)}
+                  ${AS.quickTemplate(config.format_template, item)}
                 {/if}
                </span>
             </label>
