--- a/frontend/app/views/agents/_linker.html.erb
+++ b/frontend/app/views/agents/_linker.html.erb
@@ -24,6 +24,19 @@
              data-format_template="names[0].sort_name"
       />
       <div class="btn-group">
+        <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="javascript:void(0);" class="linker-browse-btn">Browse</a></li>
+          <li class="dropdown-submenu">
+            <a href="javascript:void(0);">Create</a>
+            <ul class="dropdown-menu">
+              <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_person, :inline => true %>" class="linker-create-btn">Person</a></li>
+              <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_family, :inline => true %>" class="linker-create-btn">Family</a></li>
+              <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_corporate_entity, :inline => true %>" class="linker-create-btn">Corporate Entity</a></li>
+              <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_software, :inline => true %>" class="linker-create-btn">Software</a></li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
