--- a/frontend/app/views/subjects/_linker.html.erb
+++ b/frontend/app/views/subjects/_linker.html.erb
@@ -18,7 +18,7 @@
              <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
               <ul class="dropdown-menu">
                  <li><a href="javascript:void(0);" class="linker-browse-btn">Browse</a></li>
-                 <li><a href="javascript:void(0);" class="linker-create-btn">Create</a></li>
+                 <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :subjects, :action => :new, :inline => true %>" class="linker-create-btn">Create</a></li>
               </ul>
           </div>
        </div>
