ensure date form is initialised with date.crud javascript

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -111,6 +111,11 @@ section h3 {
     }
   }
 }
+.linker-wrapper.multiplicity-one {
+  .token-input-list {
+    min-height: 28px;
+  }
+}
 
 #new_subject .terms-container .row-fluid {
   margin-bottom: 5px;
