Add icon to agent tokens.. and sidebar to event form

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -117,6 +117,30 @@ section h3 {
   }
 }
 
+.token-input-dropdown, .token-input-list {
+  .icon-token {
+    float: left;
+    .opacity(75);
+    margin: 2px 4px 0 0;
+  }
+
+  .token-input-selected-token .icon-token {
+    .opacity(100);
+  }
+
+  .agent_person.token-input-token .icon-token {
+    background-position: -168px 0;
+  }
+
+  .subject.token-input-token .icon-token {
+     display: none;
+  }
+
+  .location.token-input-token .icon-token {
+    display: none;
+  }
+}
+
 #new_subject .terms-container .row-fluid {
   margin-bottom: 5px;
 
