Fix agent create form when loaded from linker... and add icons for tokens

--- a/frontend/app/assets/stylesheets/archivesspace/token-input.less
+++ b/frontend/app/assets/stylesheets/archivesspace/token-input.less
@@ -82,7 +82,7 @@ li.token-input-token p {
   margin: 0;
 }
 
-li.token-input-token span {
+li.token-input-token .token-input-delete-token {
   float: right;
   color: #777;
   cursor: pointer;
