--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -128,17 +128,12 @@ section h3 {
     .opacity(100);
   }
 
-  .agent_person.token-input-token .icon-token {
-    background-position: -168px 0;
-  }
-
-  .subject.token-input-token .icon-token {
-     display: none;
-  }
-
-  .location.token-input-token .icon-token {
-    display: none;
-  }
+  .agent_person .icon-token {background-position: -168px 0;}
+  .agent_software .icon-token {background-position: -360px -144px;}
+  .agent_corporate_entity .icon-token {background-position: -432px -144px;}
+  .agent_family .icon-token {background-image: url(../../archivesspace/icon-family.png); background-position: 0 0;}
+  .subject .icon-token {display: none;}
+  .location .icon-token {display: none;}
 }
 
 #new_subject .terms-container .row-fluid {
