Added an initial sketch of the record linker for events

--- a/frontend/app/views/events/_form.html.erb
+++ b/frontend/app/views/events/_form.html.erb
@@ -19,3 +19,5 @@
 
 
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_agents"} %>
+
+<%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_records"} %>
