Add Linked Records to sidebar for events and clean up linker without any buttons

--- a/frontend/app/views/events/_record_linker.html.erb
+++ b/frontend/app/views/events/_record_linker.html.erb
@@ -10,7 +10,7 @@
 <div class="control-group">
   <label class="control-label">Record</label>
   <div class="controls">
-    <div class="input-append linker-wrapper">
+    <div class="linker-wrapper">
       <input type="text" class="linker"
              data-object_class="<%= form.obj["jsonmodel_type"] %>"
              data-controller="events"
