--- a/frontend/app/assets/stylesheets/archivesspace/token-input.less
+++ b/frontend/app/assets/stylesheets/archivesspace/token-input.less
@@ -15,7 +15,7 @@ ul.token-input-list {
   
   background-color: @inputBackground;
   border: 1px solid @inputBorder;
-  .border-radius(@inputBorderRadius 0 0 @inputBorderRadius);
+  .border-radius(@inputBorderRadius);
   .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
   @transition: border linear .2s, box-shadow linear .2s;
   .transition(@transition);
@@ -27,6 +27,10 @@ ul.token-input-list {
     outline: thin dotted \9; /* IE6-9 */
     .box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6)");
   }
+}
+
+.input-append ul.token-input-list  {
+  .border-radius(@inputBorderRadius 0 0 @inputBorderRadius);
 }
 
 ul.token-input-list li {
