--- a/frontend/app/views/events/_sidebar.html.erb
+++ b/frontend/app/views/events/_sidebar.html.erb
@@ -3,6 +3,7 @@
     <li><a href="#basic_information">Basic Information <span class="icon-chevron-right"></span></a></li>
     <li><a href="#event_date">Event Date <span class="icon-chevron-right"></span></a></li>
     <li><a href="#event_linked_agents_">Agent Links <span class="icon-chevron-right"></span></a></li>
+    <li><a href="#event_linked_records_">Record Links <span class="icon-chevron-right"></span></a></li>
 
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
