--- a/frontend/app/views/accessions/_sidebar.html.erb
+++ b/frontend/app/views/accessions/_sidebar.html.erb
@@ -18,6 +18,10 @@
       <li><a href="#accession_rights_statements_">Rights Statements <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
+    <% if not controller.action_name === "show" or @accession.deaccessions.length > 0 %>
+      <li><a href="#accession_deaccessions_">Deaccessions <span class="icon-chevron-right"></span></a></li>
+    <% end %>
+
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
         <button type="submit" class="btn btn-primary">Save Accession</button>
