Add deaccessions to Resource

--- a/frontend/app/views/resources/_form_container.html.erb
+++ b/frontend/app/views/resources/_form_container.html.erb
@@ -19,6 +19,7 @@
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "external_documents"} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "rights_statements"} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "instances"} %>
+  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "deaccessions"} %>
 
 
 </fieldset>
