--- a/frontend/app/views/resources/_sidebar.html.erb
+++ b/frontend/app/views/resources/_sidebar.html.erb
@@ -23,6 +23,7 @@
     <% if not controller.action_name === "show" or @resource.instances.length > 0 %>
       <li><a href="#resource_instances_">Instances <span class="icon-chevron-right"></span></a></li>
     <% end %>
+			<li><a href="<%= @resource.id %>/export">Encoded Archival Description <span class="icon-chevron-right"></span></a></li>
 
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
