--- a/frontend/app/views/groups/edit.erb
+++ b/frontend/app/views/groups/edit.erb
@@ -5,10 +5,11 @@
   </div>
 
   <div class="span9 record-pane">
-    <h2><%= @group.description %> <span class="label label-info">Group</span></h2>
+    <h2><%= !@group.description.empty? ? @group.description : "Edit Group " %> <span class="label label-info">Group</span></h2>
 
     <%= form_for @group, :as => "group", :url => {:action => :update, :id => @group.id}, :html => {:class => 'form-horizontal'} do |f| %>
       <%= form_context :group, @group.to_hash(true) do |form| %>
+				<%= render :partial => "shared/form_messages", :locals => {:form => form} %>
         <%= render :partial => "groups/form", :locals => {:form => form} %>
       <% end %>
     <% end %>
