--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -18,6 +18,7 @@
               <ul class="dropdown-menu">
                 <li><%= link_to "Accessions", :controller => :accessions, :action => :index %></li>
                 <li><%= link_to "Resources", :controller => :resources, :action => :index %></li>
+                <li><%= link_to "Digital Objects", :controller => :digital_objects, :action => :index %></li>
                 <li class="divider"></li>
                 <li><%= link_to "Subjects", :controller => :subjects, :action => :index %></li>
                 <li><%= link_to "Agents", :controller => :agents, :action => :index %></li>
@@ -30,6 +31,7 @@
                 <ul class="dropdown-menu">
                   <li><%= link_to "Accession", :controller => :accessions, :action => :new %></li>
                   <li><%= link_to "Resource", :controller => :resources, :action => :new %></li>
+                  <li><%= link_to "Digital Object", :controller => :digital_objects, :action => :new %></li>
                   <li class="divider"></li>
                   <li><%= link_to "Subject", :controller => :subjects, :action => :new %></li>
                   <li class="dropdown-submenu">
