Get deaccessions working with latest DB and frontent changes

--- a/frontend/app/views/dates/_template.html.erb
+++ b/frontend/app/views/dates/_template.html.erb
@@ -1,5 +1,5 @@
 <% define_template "date" do |form| %>
-  <div class="subrecord-form-fields" data-allow-removal="true">
+  <div class="subrecord-form-fields">
     <div class="date-container">
       <%= form.label_and_select :label, form.options_for(:label, JSONModel(:date).schema['properties']['label']['enum']) %>
 
