Change deaccession to have a single date association as per specs

--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -5,6 +5,7 @@
 //= require dates.crud
 //= require notes.crud
 //= require instances.crud
+//= require deaccessions.crud
 //= require subrecord.crud
 
 $(function() {
