--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -62,9 +62,12 @@
   padding-left: 10px;
 }
 
-.record-pane section h3 .btn.pull-right,
-.record-pane section section h4 .btn.pull-right {
+.record-pane section h3 .btn.pull-right {
   margin: 6px 6px 0 0;
+}
+
+.record-pane section section h4 .btn.pull-right {
+  margin: 2px 6px 0 0;
 }
 
 section h3 {
