--- a/frontend/app/views/deaccessions/_show.html.erb
+++ b/frontend/app/views/deaccessions/_show.html.erb
@@ -19,14 +19,12 @@
               <% if deaccession["whole_or_part"] %>Whole<% else %>Part<% end %>
             </div>
             <div class="span3">
-              <% if deaccession["dates"].length > 0 %>
-                <% if deaccession["dates"][0]['date_type'] === "expression" %>
-                  <%= deaccession["dates"][0]['expression'] %>
-                <% elsif deaccession["dates"][0]['date_type'] === "single" %>
-                  <%= deaccession["dates"][0]['begin'] %> <%= deaccession["dates"][0]['begin_time'] %>
-                <% else %>
-                  <%= deaccession["dates"][0]['begin'] %> <%= deaccession["dates"][0]['begin_time'] %> &ndash; <%= deaccession["dates"][0]['end'] %> <%= deaccession["dates"][0]['end_time'] %>
-                <% end %>
+              <% if deaccession["date"]['date_type'] === "expression" %>
+                <%= deaccession["date"]['expression'] %>
+              <% elsif deaccession["date"]['date_type'] === "single" %>
+                <%= deaccession["date"]['begin'] %> <%= deaccession["date"]['begin_time'] %>
+              <% else %>
+                <%= deaccession["date"]['begin'] %> <%= deaccession["date"]['begin_time'] %> &ndash; <%= deaccession["date"]['end'] %> <%= deaccession["date"]['end_time'] %>
               <% end %>
             </div>
             <div class="span7">
@@ -39,7 +37,7 @@
         </div>
         <div id="deaccession_<%= index %>" class="accordion-body collapse">
           <div class="subrecord-form-container">
-            <% deaccession.reject{|k,v| ["lock_version", "dates", "extents", "jsonmodel_type"].include?(k)}.each do |k, v| %>
+            <% deaccession.reject{|k,v| ["lock_version", "date", "extents", "jsonmodel_type"].include?(k)}.each do |k, v| %>
               <div class="row-fluid label-and-value">
                 <div class="span3 offset1" ><%= I18n.t("deaccession.#{k}") %></div>
                 <% if JSONModel(:deaccession).schema["properties"][k]["enum"] %>
@@ -49,11 +47,9 @@
                 <% end %>
               </div>
             <% end %>
+            <%= render :partial => "dates/show", :locals => { :dates =>[deaccession["date"]], :section_id => "deaccession_#{index}_date_", :section_title => "Deaccession Date" } %>
             <% if deaccession["extents"].length > 0 %>
               <%= render :partial => "extents/show", :locals => { :extents => deaccession["extents"], :section_id => "deaccession_#{index}_extents_" } %>
-            <% end %>
-            <% if deaccession["dates"].length > 0 %>
-              <%= render :partial => "dates/show", :locals => { :dates => deaccession["dates"], :section_id => "deaccession_#{index}_dates_" } %>
             <% end %>
           </div>
         </div>
