--- a/frontend/app/views/deaccessions/_template.html.erb
+++ b/frontend/app/views/deaccessions/_template.html.erb
@@ -5,11 +5,22 @@
     <%= form.label_and_textarea "reason" %>
     <%= form.label_and_textarea "disposition" %>
     <%= form.label_and_boolean "notification" %>
+
     <div class="subrecord-form-container">
-      <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
+      <%# render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates"} %>
+      <section id="deaccession_date" class="subrecord-form">
+        <h4>Deaccession Date</h4>
+        <div class="subrecord-form-container">
+          <% form.push("date", form.obj["date"] || {"label" => "deaccession"}) do %>
+            <% render :partial => "dates/template", :locals => {:form => form} %>
+            <% form.emit_template("date") %>
+          <% end %>
+        </div>
+      </section>
     </div>
+
     <div class="subrecord-form-container">
-      <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates"} %>
+      <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents", :heading_size => "h4"} %>
     </div>
   </div>
 <% end %>
