--- a/frontend/app/views/resources/_show_inline.html.erb
+++ b/frontend/app/views/resources/_show_inline.html.erb
@@ -5,6 +5,7 @@
   <div class="span9 record-pane">
     <%= readonly_context :resource, @resource.to_hash(true) do |readonly| %>
       <div class="btn-group" style="float: right">
+        <%= link_to "Download EAD", {:controller => :exports, :action => :download_ead, :id => @resource.id}, :class => "btn btn-small" %>
         <% if user_can?('update_repository') %>
           <%= link_to "Edit", {:controller => :resources, :action => :edit, :id => @resource.id, :anchor => "resource_#{@resource.id}"}, :class => "btn btn-small" %>
         <% end %>
@@ -58,8 +59,6 @@
       <% if @resource.instances.length > 0 %>
         <%= render :partial => "instances/show", :locals => { :instances => @resource.instances, :section_id => "resource_instances_"  } %>
       <% end %>
-
-			<%= render :partial => "ead/show", :locals => { :ead => @ead, :section_id => "resource_ead_" } %>
     <% end %>
   </div>
 </div>
