--- a/frontend/app/views/agents/name_forms/_agent_person.html.erb
+++ b/frontend/app/views/agents/name_forms/_agent_person.html.erb
@@ -19,7 +19,7 @@
       <%= form.label("sort_name") %>
       <div class="controls">
         <%= form.textfield "sort_name", form["sort_name"], :readonly => "readonly" %>
-        <label><%= form.checkbox "automatic", true, :class => "sort-name-generation-type" %> <small>Automatically generate?</small></label>
+        <label><%= form.checkbox "automatic", {:class => "sort-name-generation-type"}, true, true %> <small>Automatically generate?</small></label>
       </div>
     </div>
     <hr/>
