--- a/frontend/app/assets/javascripts/digital_objects.crud.js.erb
+++ b/frontend/app/assets/javascripts/digital_objects.crud.js.erb
@@ -3,6 +3,7 @@
 //= require jstree
 //= require subjects.crud
 //= require dates.crud
+//= require notes.crud
 //= require subrecord.crud
 
 $(function() {
