--- a/frontend/app/views/dates/_template.html.erb
+++ b/frontend/app/views/dates/_template.html.erb
@@ -4,7 +4,7 @@
       <%= form.label_and_select "label", form.options_for("label", JSONModel(:date).schema['properties']['label']['enum']) %>
 
       <div class="control-group">
-        <label class="control-label"><%= I18n.t(form.i18n_for("date_type"))%></label>
+        <label class="control-label" id="<%= form.id_for("date_type") %>"><%= I18n.t(form.i18n_for("date_type"))%></label>
         <div class="controls">
           <div class="accordion controls-accordion date-type-accordion" id="<%= form.id_for("date_type_accordion") %>">
             <div class="accordion-group">
