--- a/frontend/app/views/digital_objects/_form_container.html.erb
+++ b/frontend/app/views/digital_objects/_form_container.html.erb
@@ -14,11 +14,10 @@
     <%= form.label_and_select "digital_object_type", form.jsonmodel_options_for(:digital_object, "digital_object_type") %>
     <%= form.label_and_textfield "language" %>
     <%= form.label_and_boolean "restrictions", {}, form.jsonmodel_schema_definition(:digital_object, "restrictions")["default"] %>
+    <%= render :partial => "subjects/linker", :locals => { :form => form }%>
   </section>
 
-
   <%= render :partial => "notes/form", :locals => {:form => form} %>
-
 
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates"} %>
