--- a/frontend/app/views/digital_object_components/_form_container.html.erb
+++ b/frontend/app/views/digital_object_components/_form_container.html.erb
@@ -12,8 +12,16 @@
 
   <section id="basic_information">
     <h3>Basic Information</h3>
+    <%= form.label_and_textfield "label" %>
     <%= form.label_and_textfield "title" %>
+    <%= form.label_and_textfield "component_id" %>
+    <%= form.label_and_boolean "publish", {}, form.jsonmodel_schema_definition(:@digital_object_component, "publish")["default"] %>
+    <%= form.label_and_textfield "language" %>
+
+    <%= render :partial => "subjects/linker", :locals => { :form => form }%>
   </section>
+
+  <%= render :partial => "notes/form", :locals => {:form => form} %>
 
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates"} %>
