--- a/frontend/app/views/digital_object_components/_show_inline.html.erb
+++ b/frontend/app/views/digital_object_components/_show_inline.html.erb
@@ -3,51 +3,54 @@
     <%= render :partial => "sidebar" %>
   </div>
   <div class="span9 record-pane">
-    <div class="btn-group" style="float: right">
-       <% if @digital_object_id %>
-          <% if user_can?('update_repository') %>
-            <%= link_to "Edit", {:controller => :digital_objects, :action => :edit, :id => @digital_object_id, :anchor => "digital_object_component_#{@digital_object_component.id}"}, :class => "btn btn-small" %>
-          <% end %>
-       <% end %>
-    </div>
+    <%= readonly_context :resource, @resource.to_hash(true) do |readonly| %>
 
-    <h2><%= @digital_object_component.title %> <span class="label label-info">Archival Object</span></h2>
-    <section id="basic_information">
-      <h3>Basic Information</h3>
-      <div class="row-fluid label-and-value">
-        <div class="span3">Title</div>
-        <div class="span9"><%= @digital_object_component.title %></div>
-      </div>
-      <div class="row-fluid label-and-value identifier-display">
-        <div class="span3">Ref ID</div>
-        <div class="span9"><span class="identifier-display-part"><%= @digital_object_component.ref_id %></span></div>
-      </div>
-      <% if not @digital_object_component.subjects.blank? %>
-        <hr/>
-        <div class="row-fluid label-and-value">
-          <div class="span3">Subjects</div>
-          <div class="span9">
-            <% @digital_object_component["resolved"]["subjects"].each do | subject | %>
-              <div class="token">
-                <%= Subject.from_hash(subject).display_string %>
-              </div>
+      <div class="btn-group" style="float: right">
+         <% if @digital_object_id %>
+            <% if user_can?('update_repository') %>
+              <%= link_to "Edit", {:controller => :digital_objects, :action => :edit, :id => @digital_object_id, :anchor => "digital_object_component_#{@digital_object_component.id}"}, :class => "btn btn-small" %>
             <% end %>
+         <% end %>
+      </div>
+
+      <h2><%= @digital_object_component.title %> <span class="label label-info">Digital Object</span></h2>
+      <section id="basic_information">
+        <h3>Basic Information</h3>
+
+        <%= readonly.label_and_textfield "label" %>
+        <%= readonly.label_and_textfield "title" %>
+        <%= readonly.label_and_textfield "component_id" %>
+        <%= readonly.label_and_boolean "publish" %>
+        <%= readonly.label_and_textfield "language" %>
+
+        <% if not @digital_object_component.subjects.blank? %>
+          <hr/>
+          <div class="row-fluid label-and-value">
+            <div class="span3">Subjects</div>
+            <div class="span9">
+              <% @digital_object_component["resolved"]["subjects"].each do | subject | %>
+                <div class="token">
+                  <%= Subject.from_hash(subject).display_string %>
+                </div>
+              <% end %>
+            </div>
           </div>
-        </div>
+        <% end %>
+
+      </section>
+
+      <% if @digital_object_component.extents.length > 0 %>
+        <%= render :partial => "extents/show", :locals => { :extents => @digital_object_component.extents, :section_id => "digital_object_component_extents_" } %>
       <% end %>
 
-    </section>
+      <% if @digital_object_component.dates.length > 0 %>
+        <%= render :partial => "dates/show", :locals => { :dates => @digital_object_component.dates, :section_id => "digital_object_component_dates_" } %>
+      <% end %>
 
-    <% if @digital_object_component.extents.length > 0 %>
-      <%= render :partial => "extents/show", :locals => { :extents => @digital_object_component.extents, :section_id => "digital_object_component_extents_" } %>
-    <% end %>
+      <% if @digital_object_component.external_documents.length > 0 %>
+        <%= render :partial => "external_documents/show", :locals => { :external_documents => @digital_object_component.external_documents, :section_id => "digital_object_component_external_documents_" } %>
+      <% end %>
 
-    <% if @digital_object_component.dates.length > 0 %>
-      <%= render :partial => "dates/show", :locals => { :dates => @digital_object_component.dates, :section_id => "digital_object_component_dates_" } %>
-    <% end %>
-
-    <% if @digital_object_component.external_documents.length > 0 %>
-      <%= render :partial => "external_documents/show", :locals => { :external_documents => @digital_object_component.external_documents, :section_id => "digital_object_component_external_documents_" } %>
     <% end %>
 
   </div>
