--- a/frontend/app/views/digital_objects/_show_inline.html.erb
+++ b/frontend/app/views/digital_objects/_show_inline.html.erb
@@ -12,16 +12,15 @@
       <h2><%= @digital_object.title %> <span class="label label-info">Digital Object</span></h2>
       <section id="basic_information">
         <h3>Basic Information</h3>
-        <div class="row-fluid label-and-value">
-            <div class="span3">Title</div>
-            <div class="span9"><%= @digital_object.title %></div>
-         </div>
-         <div class="row-fluid label-and-value">
-            <div class="span3">Identifier</div>
-            <div class="span9 identifier-display">
-               <span class="identifier-display-part"><%= @digital_object.id_0 %></span><span class="identifier-display-part"><%= @digital_object.id_1 %></span><span class="identifier-display-part"><%= @digital_object.id_2 %></span><span class="identifier-display-part"><%= @digital_object.id_3 %></span>
-            </div>
-         </div>
+
+        <%= readonly.label_and_textfield "title" %>
+        <%= readonly.label_and_textfield "digital_object_id" %>
+        <%= readonly.label_and_boolean "publish" %>
+        <%= readonly.label_and_select "level", readonly.jsonmodel_options_for(:digital_object, "level") %>
+        <%= readonly.label_and_select "digital_object_type", readonly.jsonmodel_options_for(:digital_object, "digital_object_type") %>
+        <%= readonly.label_and_textfield "language" %>
+        <%= readonly.label_and_boolean "restrictions" %>
+
          <% if not @digital_object.subjects.blank? %>
          <hr/>
          <div class="row-fluid label-and-value">
