Frontend support for updating digital objects and digital object components

--- a/frontend/app/views/digital_objects/_tree.html.erb
+++ b/frontend/app/views/digital_objects/_tree.html.erb
@@ -47,7 +47,7 @@
       <ul class="dropdown-menu">
         <li>
            <a href="javascript:void(0);" class="add-child-digital-object-component">
-              <span class='icon-file'></span> Archival Object
+              <span class='icon-file'></span> Digital Object Component
            </a>         
         </li>
       </ul>
@@ -63,7 +63,7 @@
        <ul class="dropdown-menu">
          <li>
             <a href="javascript:void(0);" class="add-sibling-digital-object-component">
-               <span class='icon-file'></span> Archival Object
+               <span class='icon-file'></span> Digital Object Component
             </a>         
          </li>
        </ul>
