--- a/frontend/app/assets/javascripts/digital_objects.crud.js.erb
+++ b/frontend/app/assets/javascripts/digital_objects.crud.js.erb
@@ -22,7 +22,7 @@ $(function() {
   var rerenderTree = function(callback) {
     var selected_node_id = $(".selected", $tree).attr("id");
 
-    if (selected_node_id === "newAO") {
+    if (selected_node_id === "newDO") {
       selected_node_id = "digital_object_component_" + $("#ao_id", $container).val();
     }
 
@@ -46,7 +46,7 @@ $(function() {
     $(".btn-cancel", $form).html("Revert Changes");
     $(".btn-cancel", $form).before("<a id='save_and_finish_editing' class='btn btn-success' href='" + APP_PATH + "digital_objects/" + digital_object_tree_data.digital_object_id + location.hash + "'>Finish Editing</a>");
 
-    if (location.hash !== "#tree::newAO") {
+    if (location.hash !== "#tree::newDO") {
       $(".btn-primary", $form).attr("disabled", "disabled");
       $(".btn-cancel", $form).attr("disabled", "disabled");
     }
@@ -62,10 +62,10 @@ $(function() {
         if (data.success) {
           // if parent is a digital_object add +1 as a child
           if ($(".selected", $tree).parents("li:first").hasClass("digital_object")) {
-            $(".archives-tree-container .add-child-digital-object-component-analog").trigger("click");
+            $(".archives-tree-container .add-child-digital-object-component").trigger("click");
           } else {
             // else add +1 as a sibling
-            $(".archives-tree-container .add-sibling-digital-object-component-analog").trigger("click");
+            $(".archives-tree-container .add-sibling-digital-object-component").trigger("click");
           }
         }
       };
@@ -87,7 +87,7 @@ $(function() {
         if ($container.find(".form-messages .alert-error:first, .form-messages .alert-warning:first").length) {
           $container.triggerHandler("submitted", {success: false});
         } else {
-          if (location.hash === "#tree::newAO") {
+          if (location.hash === "#tree::newDO") {
             changeHashSilently("#digital_object_component_" + $(response).find("#ao_id").val());
           }
           form_changed = false;
@@ -112,7 +112,7 @@ $(function() {
 
 
   var loadPaneForNode = function(nodeEl) {
-    if (nodeEl.attr("id") === "newAO") {
+    if (nodeEl.attr("id") === "newDO") {
 
       var data = {
         digital_object: digital_object_tree_data.digital_object_id,
@@ -134,7 +134,7 @@ $(function() {
         },
         error: function() {
           $container.html("<div class='alert alert-error'><p>An error occurred loading this form.</p><pre>"+errorDesc+"</pre></div>")
-          console.log("ERROR! $('.archives-tree-container').on('click', '.add-child-digital-object-component-analog')");
+          console.log("ERROR! $('.archives-tree-container').on('click', '.add-child-digital-object-component')");
         }
       });
     } else if (nodeEl.attr("rel") === "digital_object_component") {
@@ -184,7 +184,7 @@ $(function() {
     // render tree toolbar
     $("#archives_tree_toolbar").html(AS.renderTemplate("tree_toolbar_template"));
     renderTreeNodeNavigation();
-    if ((nodeEl.hasClass("digital_object") && nodeEl.find("> ul > li").length === 0) || (nodeEl.hasClass("digital_object_component") && nodeEl.attr("id") != "newAO")) {
+    if ((nodeEl.hasClass("digital_object") && nodeEl.find("> ul > li").length === 0) || (nodeEl.hasClass("digital_object_component") && nodeEl.attr("id") != "newDO")) {
       $(".btn-toolbar > .btn-group:first", "#archives_tree_toolbar").append(AS.renderTemplate("tree_toolbar_addchild_template"));
       if (!nodeEl.hasClass("digital_object") && !nodeEl.parents("li:first").hasClass("digital_object")) {
         $(".btn-toolbar > .btn-group:first", "#archives_tree_toolbar").append(AS.renderTemplate("tree_toolbar_addsibling_template"));
@@ -239,16 +239,16 @@ $(function() {
 
 
   var addNewAONode = function(parentNode) {
-    $tree.jstree("create_node", parentNode, "last", {"attr":{"id": "newAO"}, "data": {"title": "New Archival Object"}});
-    $("#newAO", $tree).addClass("analog").attr("rel", "digital_object_component");
-    $("#newAO", $tree).find("a").attr("href", "#newAO");
-    setHashForNode("newAO");
+    $tree.jstree("create_node", parentNode, "last", {"attr":{"id": "newDO"}, "data": {"title": "New Digital Object Component"}});
+    $("#newDO", $tree).addClass("analog").attr("rel", "digital_object_component");
+    $("#newDO", $tree).find("a").attr("href", "#newDO");
+    setHashForNode("newDO");
   };
 
 
   var addTreeEventBindings = function() {
 
-    $(".archives-tree-container").on("click", ".add-child-digital-object-component-analog", function() {
+    $(".archives-tree-container").on("click", ".add-child-digital-object-component", function() {
       var $selected = $(".selected", $tree);
       if ($selected.length === 0) {
         return;
@@ -257,7 +257,7 @@ $(function() {
       addNewAONode($selected);
     });
 
-    $(".archives-tree-container").on("click", ".add-sibling-digital-object-component-analog", function() {
+    $(".archives-tree-container").on("click", ".add-sibling-digital-object-component", function() {
       var $selected = $(".selected", $tree);
       if ($selected.length === 0) {
         return;
@@ -273,7 +273,7 @@ $(function() {
         return;
       }
 
-      if ($(".selected", $tree).attr("id") === "newAO") {
+      if ($(".selected", $tree).attr("id") === "newDO") {
         setHashForNode($(".selected", $tree).parents("li:first").attr("id"));
       } else {
         loadPaneForNode($(".selected", $tree));
@@ -336,7 +336,7 @@ $(function() {
 
   var confirmChanges = function(targetNodeEl) {
     var parentIdForNewAO;
-    if (targetNodeEl.attr("id") === "newAO") {
+    if (targetNodeEl.attr("id") === "newDO") {
       parentIdForNewAO = targetNodeEl.parents("li:first").attr("id");
     }
 
@@ -348,7 +348,7 @@ $(function() {
 
       var onSubmitSuccess = function() {
         form_changed = false;
-        if (targetNodeEl.attr("id") === "newAO") {
+        if (targetNodeEl.attr("id") === "newDO") {
           addNewAONode($("#"+parentIdForNewAO));
         } else {
           setHashForNode(targetNodeEl.attr("id"));
@@ -371,8 +371,8 @@ $(function() {
 
     $("#dismissChangesButton", "#saveYourChangesModal").on("click", function() {
       form_changed = false;
-      if (targetNodeEl.attr("id") != "newAO") {
-        $tree.jstree("delete_node", $('#newAO', $tree));
+      if (targetNodeEl.attr("id") != "newDO") {
+        $tree.jstree("delete_node", $('#newDO', $tree));
       }
       setHashForNode(targetNodeEl.attr("id"));
       $("#saveYourChangesModal").modal("hide");
@@ -459,8 +459,8 @@ $(function() {
       if ($nodeToSelect.find("a").attr("href") === location.hash) {
         return;
       }
-      if ($nodeToSelect.attr("id") === "newAO") {
-        setHashForNode("newAO");
+      if ($nodeToSelect.attr("id") === "newDO") {
+        setHashForNode("newDO");
       } else {
         setHashForNode($nodeToSelect.find("a").attr("href"));
       }
