--- a/frontend/app/views/digital_object_components/_form_container.html.erb
+++ b/frontend/app/views/digital_object_components/_form_container.html.erb
@@ -7,15 +7,15 @@
 <fieldset>
 
   <%= form.hidden_input "parent" %>
-  <%= form.hidden_input "resource" %>
-  <%= hidden_field_tag "ao_id", @digital_object_component.id %>
+  <%= form.hidden_input "digital_object" %>
+  <%= hidden_field_tag "do_id", @digital_object_component.id %>
 
   <section id="basic_information">
     <h3>Basic Information</h3>
     <%= form.label_and_textfield "label" %>
     <%= form.label_and_textfield "title" %>
     <%= form.label_and_textfield "component_id" %>
-    <%= form.label_and_boolean "publish", {}, form.jsonmodel_schema_definition(:@digital_object_component, "publish")["default"] %>
+    <%= form.label_and_boolean "publish", {}, form.jsonmodel_schema_definition(:digital_object_component, "publish")["default"] %>
     <%= form.label_and_textfield "language" %>
 
     <%= render :partial => "subjects/linker", :locals => { :form => form }%>
