--- a/frontend/app/views/digital_objects/_sidebar.html.erb
+++ b/frontend/app/views/digital_objects/_sidebar.html.erb
@@ -6,7 +6,9 @@
       <li><a href="#notes">Notes <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
-    <li><a href="#digital_object_extents_">Extents <span class="icon-chevron-right"></span></a></li>
+    <% if not controller.action_name === "show" or @digital_object.extents.length > 0 %>
+      <li><a href="#digital_object_extents_">Extents <span class="icon-chevron-right"></span></a></li>
+    <% end %>
 
     <% if controller.action_name != "show" || @digital_object.dates.length > 0 %>
       <li><a href="#digital_object_dates_">Dates <span class="icon-chevron-right"></span></a></li>
