--- a/frontend/app/views/rights_statements/_template.html.erb
+++ b/frontend/app/views/rights_statements/_template.html.erb
@@ -2,7 +2,7 @@
   <div class="subrecord-form-fields">
     <%= form.label_and_textfield "identifier" %>
     <%= form.label_and_select "rights_type", form.jsonmodel_options_for(:rights_statement, "rights_type") %>
-    <%= form.label_and_boolean "active" %>
+    <%= form.label_and_boolean "active", {}, form.jsonmodel_schema_definition(:rights_statement, "active")["default"] %>
     <%= form.label_and_textfield "materials" %>
     <%= form.label_and_select "ip_status", form.jsonmodel_options_for(:rights_statement, "ip_status") %>
     <%= form.label_and_date "ip_expiration_date" %>
