Fix tree pane height blowing out if large tree; and fix sidebar floating off screen if small viewport (was breaking tests as button was off screen)

--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -321,6 +321,8 @@ $(function() {
 
     if ($.cookie("archives-tree-container::height")) {
       $(".archives-tree-container").height($.cookie("archives-tree-container::height"));
+    } else {
+      $(".archives-tree-container").height(AS.DEFAULT_TREE_PANE_HEIGHT);
     }
     setTimeout(resizeArchivesTree, 0);
 
