--- a/frontend/app/views/agents/_sidebar.html.erb
+++ b/frontend/app/views/agents/_sidebar.html.erb
@@ -1,5 +1,5 @@
 <div id="archivesSpaceSidebar">
-  <ul class="nav nav-list affix as-nav-list" data-spy="affix">
+  <ul class="nav nav-list as-nav-list">
     <li><a href="#agent_details">Agent Details <span class="icon-chevron-right"></span></a></li>
 
     <% if not controller.action_name === "show" or @agent.names.length > 0 %>
