--- a/frontend/app/views/archival_objects/_sidebar.html.erb
+++ b/frontend/app/views/archival_objects/_sidebar.html.erb
@@ -1,5 +1,5 @@
 <div id="archivesSpaceSidebar">
-  <ul class="nav nav-list affix as-nav-list" data-spy="affix">
+  <ul class="nav nav-list as-nav-list">
     <li><a href="#basic_information">Basic Information <span class="icon-chevron-right"></span></a></li>
 
     <% if controller.action_name != "show" || @archival_object.extents.length > 0 %>
