Fix fieldset and linker widget width when viewed on a viewport between 768-980 pixels

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -1,5 +1,9 @@
 @import "variables";
 
+fieldset {
+  width: 100%;
+}
+
 /* custom controls-accordion for radio driven accordion */
 .controls-accordion .accordion-group {
   border: none;
