--- a/frontend/app/assets/stylesheets/archivesspace/token-input.less
+++ b/frontend/app/assets/stylesheets/archivesspace/token-input.less
@@ -210,3 +210,13 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {
   .subject .icon-token {display: none;}
   .location .icon-token {display: none;}
 }
+
+@media (min-width: 768px) and (max-width: 979px) {
+  ul.token-input-list {
+    width: 300px;
+  }
+
+  ul.token-input-list li input {
+    width: 300px;
+  }
+}
