fix sidebar floating over tree pane

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -158,7 +158,7 @@ section h3 {
   .opacity(100);
 }
 .as-nav-list.affix {
-  top: 40px;
+  //top: 40px;
 }
 .as-nav-list.affix-bottom {
   position: absolute !important;
