--- a/frontend/app/views/resources/_tree.html.erb
+++ b/frontend/app/views/resources/_tree.html.erb
@@ -3,23 +3,12 @@
   <div id="archives_tree" class="archives-tree" data-resource-id="<%= @resource.id %>" data-resource="<%= @resource.to_json %>"></div>
 
   <script>
-
+    AS.tree_data = <%= @resource_tree.to_json.html_safe %>;
   </script>
 
   <div id="tree_template"><!--
-     {macro render_resource(node)}
-        <li id="resource_${node.resource_id}" class="resource jstree-closed" rel="resource" data-id="${node.resource_id}">
-           <a href="#tree::resource_${node.resource_id}" title="${AS.encodeForAttribute(node.title)}">${node.title}</a>
-        </li>
-     {/macro}
-   
-     <ul class="jstree-classic">
-        ${render_resource(resource)}
-     </ul>
-  --></div>
-
-  <div id="tree_nodes_template"><!--
-     {macro render_children(nodes)}
+       {macro render_children(nodes)}
+       foo
         {if nodes && nodes.length > 0}
         <ul>
            {for node in nodes}
@@ -32,7 +21,19 @@
         {/if}
      {/macro}
 
-      ${render_children(nodes)}
+     {macro render_resource(node)}
+        <li id="resource_${node.resource_id}" class="resource jstree-closed" rel="resource" data-id="${node.resource_id}">
+           <a href="#tree::resource_${node.resource_id}" title="${AS.encodeForAttribute(node.title)}">${node.title}</a>
+           ${ node.children}
+           {if node.children}
+            ${render_children(node.children)}
+           {/if}
+        </li>
+     {/macro}
+   
+     <ul class="jstree-classic">
+        ${render_resource(tree)}
+     </ul>
   --></div>
 
   <div id="tree_toolbar_template"><!--
