Create a general partial and javascript for the tree widget (have only applied to resources currently)

--- a/frontend/app/views/archival_objects/_form_container.html.erb
+++ b/frontend/app/views/archival_objects/_form_container.html.erb
@@ -8,7 +8,7 @@
 
   <%= form.hidden_input "parent" %>
   <%= form.hidden_input "resource" %>
-  <%= hidden_field_tag "ao_id", @archival_object.id %>
+  <%= hidden_field_tag "id", @archival_object.id %>
 
   <section id="basic_information">
     <h3>Basic Information</h3>
