--- a/frontend/app/views/resources/show.html.erb
+++ b/frontend/app/views/resources/show.html.erb
@@ -1,7 +1,7 @@
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Resources", :controller => :resources, :action => :index), @resource.title]} %>
 <div class="row-fluid">
   <div class="span12">
-      <%= render :partial => "resources/tree", :locals => {:selected => "resource"} %>
+    <%= render :partial => "shared/tree", :locals => {:object => @resource, :tree => @resource_tree, :child_jsonmodel_type => "archival_object", :read_only => true} %>
   </div>
 </div>
 
