--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -55,23 +55,27 @@
       background-position: 14px 14px;
       background-repeat: no-repeat;
     }
-    
+
     a > .jstree-icon {
       background-position: -384px -120px !important;
     }
-    
+
     .jstree-open > a > .jstree-icon {
       background-position: -408px -120px !important;
     } 
-    
-    .analog > a > .jstree-icon {
+
+    .archival_object > a > .jstree-icon {
       background-position: -24px  -24px !important;
     }
-    
-    .digital > a > .jstree-icon {
+
+    .digital_object_component > a > .jstree-icon {
       background-position: -456px -24px !important;
     }
-    
+
+    .new > a > .jstree-icon {
+      background-position: -456px -96px !important;
+    }
+
     .resource > a > .jstree-icon {
       background-position: -264px -24px !important;
     }
